Tests/Pos/Null/nullReturn.p
main machine Entry {
    foreign fun foo () { }
    start state bar {
        entry {
            foo();
        }
    }
}
