Tests/Neg/Funcs/DstParam.p
main machine Entry {
    foreign fun bar(dst:int) {
    }
    start state foo {
        entry { }
    }
}
